// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Typography/> should render caption typo 1`] = `
.c0 {
  margin: 0;
  font-size: 12px;
  font-weight: 500;
}

<p
  class="c0"
>
  a
</p>
`;

exports[`<Typography/> should render sub-title typo 1`] = `
.c0 {
  margin: 0;
  font-size: 24px;
  font-weight: 500;
}

<p
  class="c0"
>
  a
</p>
`;

exports[`<Typography/> should render title typo 1`] = `
.c0 {
  margin: 0;
  font-size: 36px;
  font-weight: 500;
}

<p
  class="c0"
>
  a
</p>
`;
